change DIVA-Teilnetz responsibility for Hohenlohekreis and other stuff